--- a/html_task3.html
+++ b/html_task3.html
@@ -25,7 +25,37 @@
                 </ul>
 
             </div>
+             <div >
+            <img id="image" src="images/forest1.jpg" alt="forest" width="1400" height="500">
+                </div>
+                <div id="heading">
+                    <h1>Welcome To Department of Computer Science</h1>
+                </div>
+             <div id="left-nav">
+        
+                <ul style="flex-direction: column; font-size: 20px; " !important >
+                    <li>
+                        <a href="#" class="active" style="text-align:center">My Courses</a>
+                    </li>
+                    <li>
+                        <a href="#" class="active">Web Application Engineering</a>
+                    </li>
+                    <li>
+                        <a href="#">Mobile Application Development</a>
+                    </li>
+                    <li>
+                        <a href="#">Digital Communication</a>
+                    </li>
 
+                </ul>
+            </div>
+            <div id="main-content">
+                <h2>Some layout-related positioning attributes are required for a 
+                    view, and automatically appear when you add the view to the 
+                    XML. Some layout-related positioning attributes are required 
+                    for a view, and automatically appear when you add the view 
+                    to the XML.</h2>
+            </div>
         </div>
     </body>
 </html>
