--- a/html_task3.html
+++ b/html_task3.html
@@ -1,61 +1,64 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="css/style.css">
 
-    </head>
-    <body>
-        <div>
-            <div class="clear" id="nav-bar">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Courses</a>
-                    </li>
-                    <li>
-                        <a href="#">Departments</a>
-                    </li>
-                    <li>
-                        <a href="#">Faculties</a>
-                    </li>
-                    <li>
-                        <a href="#">About Us</a>
-                    </li>
-                </ul>
+<head>
+    <link rel="stylesheet" href="css/style.css">
 
-            </div>
-             <div >
-            <img id="image" src="images/forest1.jpg" alt="forest" width="1400" height="500">
-                </div>
-                <div id="heading">
-                    <h1>Welcome To Department of Computer Science</h1>
-                </div>
-             <div id="left-nav">
-        
-                <ul style="flex-direction: column; font-size: 20px; " !important >
-                    <li>
-                        <a href="#" class="active" style="text-align:center">My Courses</a>
-                    </li>
-                    <li>
-                        <a href="#" class="active">Web Application Engineering</a>
-                    </li>
-                    <li>
-                        <a href="#">Mobile Application Development</a>
-                    </li>
-                    <li>
-                        <a href="#">Digital Communication</a>
-                    </li>
+</head>
 
-                </ul>
-            </div>
-            <div id="main-content">
-                <h2>Some layout-related positioning attributes are required for a 
-                    view, and automatically appear when you add the view to the 
-                    XML. Some layout-related positioning attributes are required 
-                    for a view, and automatically appear when you add the view 
-                    to the XML.</h2>
-            </div>
+<body>
+    <div class="container">
+        <div class="clear" id="nav-bar">
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Courses</a>
+                </li>
+                <li>
+                    <a href="#">Departments</a>
+                </li>
+                <li>
+                    <a href="#">Faculties</a>
+                </li>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+            </ul>
+
         </div>
-    </body>
+        <div>
+            <img id="image" src="images/forest1.jpg" alt="forest" width="1400" height="500">
+        </div>
+        <div id="heading">
+            <h1>Welcome To Department of Computer Science</h1>
+        </div>
+        <div id="left-nav">
+
+            <ul style="flex-direction: column; font-size: 20px; " !important>
+                <li>
+                    <a href="#" class="active" style="text-align:center">My Courses</a>
+                </li>
+                <li>
+                    <a href="#" class="active">Web Application Engineering</a>
+                </li>
+                <li>
+                    <a href="#">Mobile Application Development</a>
+                </li>
+                <li>
+                    <a href="#">Digital Communication</a>
+                </li>
+
+            </ul>
+        </div>
+        <div id="main-content">
+            <h2>Some layout-related positioning attributes are required for a
+                view, and automatically appear when you add the view to the
+                XML. Some layout-related positioning attributes are required
+                for a view, and automatically appear when you add the view
+                to the XML.</h2>
+        </div>
+    </div>
+</body>
+
 </html>
